# mpicpp-lite

./: .buildinfo  .gitignore  .licenserc.json  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: build.yml  gh-pages.yml  qa.yml  release.yml
_sources/devel/classes/: datatype.rst.txt  wait.rst.txt
cmake/: CodeCoverage.cmake  Sanitization.cmake  mpicpp-lite-config.cmake.in
devel/classes/: communicator.html  datatype.html  matched-message.html  message.html  operation.html  request.html  status.html  test.html  wait.html
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
docs/devel/classes/: communicator.rst  datatype.rst  matched-message.rst  message.rst  operation.rst  request.rst  status.rst  test.rst
getting-started/: install.html
include/mpicpp-lite/: mpicpp-lite.h
include/mpicpp-lite/impl/: Communicator.h  Datatype.h  Enums.h  Environment.h  Error.h  Exception.h  Group.h  Info.h  MatchedMessage.h  Message.h  Operation.h  Request.h  Status.h  Tag.h  Test.h  Time.h  Wait.h  Window.h
tests/: CMakeLists.txt  CartesianCommunicator_test.cpp  Datatype_test.cpp  Exception_test.cpp  Group_test.cpp  Info_test.cpp  MPIEnvironment.h  MPI_test.cpp  Time_test.cpp  Window_test.cpp  main.cpp
